Fixup: Use text-wrap: wrap instead of pretty
Thanks to Robyn, we realized that `pretty` doesn't work on Firefox or Safari https://caniuse.com/?search=text-wrap. Switching to `wrap` that's more widely supported.

--- a/src/css/map-view.css
+++ b/src/css/map-view.css
@@ -338,7 +338,7 @@
     border: 1px solid var(--map-col-border);
     border-radius: var(--map-border-radius-small);
     padding: .5rem 1rem;
-    text-wrap: pretty;
+    text-wrap: wrap;
   }
 }
 
